Initial port to require iChunUtil primarily for it's config wrapper.